<resources>

    <string name="app_name">LockCount</string>
    <string name="counter">Number of unlocks</string>
    <string name="counter_is_zero">Lock then unlock to start</string>
    <string name="notification_title">Lock then unlock to start</string>
    <string name="notification_unlocks_singular">You\'ve unlocked your phone %1$d time today</string>
    <string name="notification_unlocks_plural">You\'ve unlocked your phone %1$d times today</string>
    <string name="tile_label">LockCount</string>
    <string name="number_of_unlocks">%1$d</string>
    <string name="number_of_unlocks_cursor">Number of unlocks: %d</string>

    <!--SharedPreference keys-->
    <string name="key_num_unlocks">numberOfUnlocks</string>
    <string name="key_alarm_hour">alarmHour</string>
    <string name="key_alarm_minute">alarmMinute</string>
    <string name="key_alarm_millisecond">alarmMillisecond</string>
    <string name="key_enable_alarm">enableAlarm</string>
    <string name="key_show_main_tutorial">showMainTutorial</string>
    <string name="key_show_history_tutorial">showHistoryTutorial</string>

    <string name="unlock_history_tutorial_1">
        Your unlock history will appear here. Data is added automatically
        at the end of each day but only if you\'ve unlocked your device at least once.
        The number of unlocks is reset to 0 at the end of each day as well.
        This can be turned off in the settings, but you\'ll have to add data manually
        as well as reset the counter yourself.
    </string>

    <string name="unlock_history_tutorial_2">
        If the \'Automatically add data\' setting is turned off, you can press
        the \'+\' button to add data (the button appears when the setting is turned off).
        Hold down an entry to delete it.
    </string>

    <string name="unlock_history_tutorial_3">
        Rotate your device to view a graph of your unlock history
    </string>

    <string name="title_activity_settings">Settings</string>

    <string name="category_general">General</string>

    <string name="pref_key_notification">show_notification</string>
    <string name="title_show_notification">Show notification</string>
    <string name="summary_show_notification">Show a notification while the app is running</string>

    <string name="pref_key_notification_priority">notification_priority</string>
    <string name="title_notification_priority">Toggle icon visibility</string>
    <string name="summary_notification_priority">Hides the icon from the device status bar instead
    of hiding the notification</string>

    <string name="pref_key_auto_log_data">key_auto_log_data</string>
    <string name="title_auto_log_data">Automatically add data</string>
    <string name="summary_auto_log_data">If enabled, this automatically adds the total number of unlocks for the day
    to your history at the end of each day</string>

    <string name="pref_key_auto_start">auto_start_switch</string>
    <string name="title_auto_start">Start on boot</string>
    <string name="summary_auto_start">May not work if the app is moved to the SD card</string>

    <string name="category_experimental">Experimental</string>

    <string name="pref_key_refresh_switch">refresh_checkbox</string>
    <string name="title_refresh_switch">Allow refresh</string>

    <string name="pref_key_refresh">refresh</string>
    <string name="title_refresh">Refresh interval</string>
    <string name="summary_refresh">Due to the way Android manages memory on some devices,
    in order to keep the app running in the background, it may need to periodically refresh.
    \n\nCurrent refresh interval: %1$d Hr %2$d Min </string>

    <string name="category_about">About</string>

    <string name="pref_key_app_version">key_app_version</string>
    <string name="title_version">Version</string>
    <string name="summary_app_version">%1$s</string>

    <string name="pref_key_send_feedback">key_send_feedback</string>
    <string name="title_send_feedback">Send feedback</string>
    <string name="summary_send_feedback">How do you like the app?</string>
    <string name="choose_email_client">Choose email client</string>

    <string name="pref_key_more_apps">key_more_apps</string>
    <string name="title_more_apps">More apps by Cameron</string>

    <string name="category_help">Help</string>

    <string name="pref_key_show_tutorial">show_tutorial</string>
    <string name="title_show_tutorial">Show tutorial</string>
    <string name="summary_tutorial">How do I use this app? What does that little red button do?</string>

    <!--Strings related to the actionbar settings menu-->
    <string name="settings_view_history">View history</string>
    <string name="main_settings">Settings</string>
    <string name="empty_graph_text">Looks like you don\'t have any data to graph</string>

</resources>
