<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/category_general" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_key_notification"
        android:summary="@string/summary_show_notification"
        android:title="@string/title_show_notification" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_key_notification_priority"
        android:summary="@string/summary_notification_priority"
        android:title="@string/title_notification_priority" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_key_auto_log_data"
        android:summary="@string/summary_auto_log_data"
        android:title="@string/title_auto_log_data"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_key_auto_start"
        android:summary="@string/summary_auto_start"
        android:title="@string/title_auto_start" />

    <PreferenceCategory android:title="@string/category_experimental">

    </PreferenceCategory>
    
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_key_refresh_switch"
        android:title="@string/title_refresh_switch" />
    <Preference
        android:key="@string/pref_key_refresh"
        android:summary="@string/summary_refresh"
        android:title="@string/title_refresh" />

    <PreferenceCategory android:title="@string/category_about" />

    <Preference
        android:key="@string/pref_key_app_version"
        android:summary="@string/summary_app_version"
        android:title="@string/title_version" />

    <Preference
        android:key="@string/pref_key_send_feedback"
        android:summary="@string/summary_send_feedback"
        android:title="@string/title_send_feedback" />

    <Preference
        android:key="@string/pref_key_more_apps"
        android:title="@string/title_more_apps" />

    <PreferenceCategory android:title="@string/category_help" />

    <Preference
        android:key="@string/pref_key_show_tutorial"
        android:summary="@string/summary_tutorial"
        android:title="@string/title_show_tutorial" />

</PreferenceScreen>